octobox/deploy.yaml
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: octobox
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: octobox
    spec:
      containers:
      - name: octobox
        image: octoboxio/octobox:latest
        imagePullPolicy: Always
