octobox/redis-deploy.yaml
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: octobox-redis
spec:
  strategy:
    type: Recreate
  replicas: 1
  template:
    metadata:
      labels:
        app: octobox-redis
    spec:
      containers:
      - name: redis
        image: redis:3.2-alpine
        imagePullPolicy: Always
        livenessProbe:
          initialDelaySeconds: 30
          tcpSocket:
            port: 6379
        volumeMounts:
          - mountPath: /var/lib/redis/data
            name: redis-data
      volumes:
      - emptyDir: {}
        name: redis-data
