octobox/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: octobox
  labels:
    app: octobox
spec:
  ports:
  - port: 3000
    targetPort: 3000
    protocol: TCP
    name: http
  selector:
    app: octobox
