octobox/ingress.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: octobox
  labels:
    app: octobox
    stable.k8s.psg.io/kcm.class: "default"
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  tls:
    - hosts:
      - "octobox.k.oneill.net"
      secretName: "octobox-tls"
  rules:
    - host: "octobox.k.oneill.net"
      http:
        paths:
          - path: /
            backend:
              serviceName: octobox
              servicePort: 3000
